<resources>
    <string name="app_name">Week Three Task</string>
    <string name="g00d_morning_sea_relativelayout"><![CDATA[G00d morning /> <Sea </RelativeLayout>]]></string>
    <string name="ruth_unoka">Ruth</string>
    <string name="sangotedo_lagos">Sangotedo, Lagos</string>
    <string name="follow_ruth">Follow Ruth</string>
    <string name="message">Message</string>
    <string name="see_more">SEE MORE</string>
    <string name="good_morning">Good morning!</string>
    <string name="switch_mode">Switch mode</string>
</resources>